# cutlass_learninig

./: .gitignore  LEARNING_PATH.md  README.md  main.ipynb  main.py
CuTE/: COMPLETION_CERTIFICATE.md  LEARNING_PATH.md  README.md
CuTE/Module_01_Layout_Algebra/: READING.md
CuTE/Module_01_Layout_Algebra/exercises/: CMakeLists.txt  README.md  ex01_basic_layout.cu  ex02_rowmajor_colmajor.cu  ex03_custom_strides.cu  ex04_layout_composition.cu  ex05_offset_mapping_challenge.cu  ex06_hierarchical_layouts.cu  ex07_layout_transformation.cu  ex08_debug_with_print.cu  ex09_layout_arithmetic.cu  ex10_real_world_layouts.cu
CuTE/Module_02_CuTe_Tensors/: BUILD.md  READING.md  README.md  tensor_basics.cu
CuTE/Module_02_CuTe_Tensors/exercises/: CMakeLists.txt  README.md  ex01_tensor_creation.cu  ex02_tensor_access.cu  ex03_tensor_slicing.cu  ex04_tensor_transpose.cu  ex05_tensor_composition.cu  ex06_multidim_tensors.cu  ex07_tensor_memory_spaces.cu  ex08_tensor_broadcasting.cu  ex09_advanced_tensor_manipulations.cu
CuTE/Module_03_Tiled_Copy/: BUILD.md  READING.md  README.md  tiled_copy_basics.cu
CuTE/Module_03_Tiled_Copy/exercises/: CMakeLists.txt  README.md  ex01_tiled_copy_basics.cu  ex02_vectorized_loads.cu  ex03_thread_cooperation.cu  ex04_gmem_to_smem.cu  ex05_copy_atom.cu  ex06_coalescing_strategies.cu  ex07_matrix_transpose_copy.cu  ex08_async_copy.cu  ex09_advanced_tiled_copy.cu
CuTE/Module_04_MMA_Atoms/: BUILD.md  READING.md  README.md  mma_atom_basics.cu
CuTE/Module_04_MMA_Atoms/exercises/: CMakeLists.txt  README.md  ex01_mma_atom_basics.cu  ex02_tensor_core_sim.cu  ex03_thread_tensor_mapping.cu  ex04_accumulator_management.cu  ex05_mixed_precision_mma.cu  ex06_gemm_with_mma.cu  ex07_mma_configurations.cu  ex08_warp_level_mma.cu  ex09_advanced_mma_configurations.cu
CuTE/Module_05_Shared_Memory_Swizzling/: BUILD.md  READING.md  README.md  shared_memory_layouts.cu
CuTE/Module_05_Shared_Memory_Swizzling/exercises/: CMakeLists.txt  README.md  ex01_shared_memory_basics.cu  ex02_bank_conflict_analysis.cu  ex03_padding_conflict_avoidance.cu  ex04_swizzling_fundamentals.cu  ex05_xor_swizzling.cu  ex06_smem_layouts_gemm.cu  ex07_swizzle_pattern_design.cu  ex08_conflict_free_transpose.cu  ex09_advanced_swizzling.cu
CuTE/Module_06_Collective_Mainloops/: BUILD.md  READING.md  README.md  producer_consumer_pipeline.cu
CuTE/Module_06_Collective_Mainloops/exercises/: CMakeLists.txt  README.md  ex01_producer_consumer.cu  ex02_collective_copy.cu  ex03_multi_stage_pipeline.cu  ex04_thread_block_cooperation.cu  ex05_mainloop_scheduling.cu  ex06_double_buffering.cu  ex07_complete_gemm_mainloop.cu  ex08_performance_optimization.cu  ex09_complete_gemm_implementation.cu
CuTE/Module_07_Predication/: README.md
CuTE/Module_08_MMA_Atom_Internals/: README.md
CuTE/Prod-examples/: rgemm_FILL_IN.cu  sgemm_FILL_IN.cu  tgemm_FILL_IN.cu  tiled_predicated_copy_FILL_IN.cu
CuTE/Projects/02_gemm/: CMakeLists.txt  gemm.cu
CuTE/Projects/02_gemm/solution/: gemm_solution.cu
CuTE/Projects/11_int8_gemm/: CMakeLists.txt  int8_gemm.cu
CuTE/Projects/11_int8_gemm/solution/: int8_gemm_solution.cu
CuTE/cutlass_3x/: README.md
Cuda/cudalings/: README.md
Cuda/cute_specific/: copy_atoms.md  copy_atoms_tutorial.cu  layout_algebra.md  layout_algebra_tutorial.cu  mma_atoms.md  mma_atoms_tutorial.cu  tiled_layouts.md  tiled_layouts_tutorial.cu
Cuda/performance_analysis/: profiling.md  profiling_tutorial.cu  roofline.md  roofline_tutorial.cu
NCCL/Module-05/: performance_optimization.cu
NCCL/Module-06/: README.md
NCCL/Module-07/: README.md  (+1 more)
cmakeguide/: COMPLETE_TRAINING_SUMMARY.md  README.md  SUMMARY.md  example_projects.md  exercises.md  hands_on_tutorial.md  quick_reference.md  setup_check.sh  troubleshooting.md
cmakeguide/training_projects/advanced/plugin_architecture/: CMakeLists.txt
cmakeguide/training_projects/advanced/plugin_architecture/include/: plugin_interface.h  plugin_manager.h
cmakeguide/training_projects/advanced/plugin_architecture/plugins/: hello_plugin.cpp  uppercase_plugin.cpp
cmakeguide/training_projects/advanced/plugin_architecture/src/: main.cpp
cmakeguide/training_projects/basic/library_example/: CMakeLists.txt
cmakeguide/training_projects/basic/library_example/include/: mathlib.h
cmakeguide/training_projects/basic/library_example/src/: main.cpp  mathlib.cpp
cmakeguide/training_projects/basic/multi_file/: CMakeLists.txt
cmakeguide/training_projects/basic/multi_file/include/: math_utils.h  string_utils.h
cmakeguide/training_projects/basic/multi_file/src/: main.cpp  math_utils.cpp  string_utils.cpp
cmakeguide/training_projects/examples/integration_examples/cmake_with_make/: CMakeLists.txt  external.mk  main.cpp
concurrency/: README.md
cpp_exercises/: CMakeLists.txt  README.md
cpp_exercises/phase0_foundations/ex01_lvalue_rvalue_identity/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase0_foundations/ex02_named_rvalue_is_lvalue/: README.md  exercise  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase0_foundations/ex03_what_move_actually_does/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase1_ownership/ex01_deep_vs_shallow/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase1_ownership/ex02_rule_of_five/: exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase4_atomics_memory_model/ex02_atomic_fixes_tearing/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase4_atomics_memory_model/ex03_memory_order_layers/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase6_modern_patterns/ex03_if_constexpr_dispatch/: README.md  exercise.cpp  hints.md  solution.cpp
cpp_exercises/phase7_interview_sim/ex01_rule_of_five_timed/: README.md  exercise.cpp  solution.cpp
cpp_exercises/phase7_interview_sim/ex02_uniqueptr_from_memory/: README.md  exercise.cpp  solution.cpp
cpp_exercises/phase7_interview_sim/ex03_tiled_gemm_timed/: README.md  exercise.cu  hints.md  solution.cu
cute_dsl/: CURRICULUM_SUMMARY.md
module2/: main.cu
python_crashcourse/: README.md
(+448 files in other folders)
